--- a/{{cookiecutter.app_name}}/Gopkg.toml
+++ b/{{cookiecutter.app_name}}/Gopkg.toml
@@ -27,13 +27,19 @@
 {% if cookiecutter.use_logrus_logging == "y" -%}
 [[constraint]]
   name = "github.com/Sirupsen/logrus"
-  version = "1.0.5"
+  version = "1.0.6"
 {%- endif %}
 
 {% if cookiecutter.use_viper_config == "y" -%}
 [[constraint]]
   name = "github.com/spf13/viper"
   version = "1.0.2"
+{%- endif %}
+
+{% if cookiecutter.use_cobra_cmd == "y" -%}
+[[constraint]]
+  name = "github.com/spf13/cobra"
+  version = "0.0.3"
 {%- endif %}
 
 [prune]
