new docker image for the build stage with the option to select diferent golang versions

--- a/{{cookiecutter.app_name}}/.circleci/config.yml
+++ b/{{cookiecutter.app_name}}/.circleci/config.yml
@@ -40,7 +40,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            echo test # docker-compose -f ./docker-compose.test.yml up
+            make test # docker-compose -f ./docker-compose.test.yml up
       - run:
           name: Push application Docker image
           command: |
